# ml-flow

./: .gitignore  Dockerfile  app.py  pyproject.toml  setup.py
container/: Dockerfile  pyproject.toml
ml_flow/: ml_flow_stack.py
