[tool.poetry]
name = "ml-flow"
version = "0.1.0"
description = ""
authors = ["Emmanuel Martínez <emartinez@seebak.com.mx>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.26"
pymysql = "^1.0"
boto3 = "^1.21"
protobuf = "^3.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
